update plots; find ZhuHayes test failures for large data sets.